# coach-running

./: .env.example  .gitignore  Dockerfile  LICENSE  README.md  docker-compose.yml  pyproject.toml
docs/: INITIAL_GETTING_STARTED.md
docs/superpowers/plans/: 2026-04-19-homelab-running-coach.md
docs/superpowers/specs/: 2026-04-19-homelab-running-coach-design.md  2026-07-02-garmin-enrichment-design.md
litellm/: config.yaml
prompts/: coach_voice.md
src/coach/: config.py  jobs.py  llm.py  main.py  memory.py  notify.py  prompts.py  scheduler.py
src/coach/storage/: activities.py  db.py  messages.py  tokens.py
src/coach/storage/migrations/: 0001_init.sql
src/coach/strava/: client.py  webhook.py
src/coach/web/: routes.py
src/coach/web/templates/: base.html  dashboard.html  memory.html  message_detail.html  messages.html  plan.html  settings.html
tests/: conftest.py  test_activities.py  test_config.py  test_db.py  test_jobs.py  test_llm.py  test_main.py  test_memory.py  test_messages.py  test_notify.py  test_prompts.py  test_strava_client.py  test_tokens.py  test_webhook.py
tests/fixtures/: strava_activity.json  strava_webhook_create.json
